--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-photo-album": "^2.3.0",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
