--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.4",
+    "basic-ftp": "^5.0.5",
     "helmet": "^7.1.0",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-intl": "^7.1.7",
     "react-pdf": "^7.7.1",
+    "react-phone-number-input": "^3.4.12",
     "react-photo-album": "^2.3.0",
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.23",
