--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-photo-album": "^2.3.0",
     "react-player": "^2.14.1",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
